--- a/mysite/myapp/templates/postview.html
+++ b/mysite/myapp/templates/postview.html
@@ -21,8 +21,8 @@ background-color:rgba(255,255,255,0.4);
 }
 
 .appu{
-    width: 350px;
-    height: 200px;
+    width: 350x;
+    height: 300px;
 margin:60px 200px 30px 40px;
     padding: 30px;
     border: 1px solid orange;
