--- a/mysite/myapp/templates/feed.html
+++ b/mysite/myapp/templates/feed.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-    <form method="post" action="/post/">
+    <form method="post" action="post/">
         {% csrf_token %}
         <input type="submit" class="btn-default btn" value="Create Post">
     </form>
