--- a/mysite/myapp/templates/signup.html
+++ b/mysite/myapp/templates/signup.html
@@ -45,7 +45,7 @@
 	<title>Instagram clone</title>
 </head>
 <body>
-<h3>{{today}}</h3>
+<h3>{{date_show}}</h3>
 </br>
 
    <h1>Instragram Clone</h1>
